--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -141,11 +141,17 @@
   <ItemGroup>
     <ClInclude Include="Classes.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Functions_elements.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DrawAndCompare_Files.cpp" />
+    <ClCompile Include="LeftWindowProc.cpp" />
+    <ClCompile Include="ReadFile_ScrollRange.cpp" />
+    <ClCompile Include="RightWindowProc.cpp" />
+    <ClCompile Include="ToolWindowProc.cpp" />
     <ClCompile Include="WindowsProject1.cpp" />
   </ItemGroup>
   <ItemGroup>
