--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="ReadFile_ScrollRange.cpp" />
     <ClCompile Include="RightWindowProc.cpp" />
     <ClCompile Include="ToolWindowProc.cpp" />
+    <ClCompile Include="WindowProc.cpp" />
     <ClCompile Include="WindowsProject1.cpp" />
   </ItemGroup>
   <ItemGroup>
