--- a/WindowsProject1/WindowsProject1.vcxproj.filters
+++ b/WindowsProject1/WindowsProject1.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="RightWindowProc.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="WindowProc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="WindowsProject1.rc">
