--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -140,10 +140,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Classes.h" />
+    <ClInclude Include="Comparator.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Functions_elements.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WindowInfo.h" />
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
