--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -141,14 +141,19 @@
   <ItemGroup>
     <ClInclude Include="Classes.h" />
     <ClInclude Include="Comparator.h" />
+    <ClInclude Include="Dialog.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Functions_elements.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="resource1.h" />
+    <ClInclude Include="resource2.h" />
+    <ClInclude Include="resource3.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowInfo.h" />
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DialogProc.cpp" />
     <ClCompile Include="DrawAndCompare_Files.cpp" />
     <ClCompile Include="LeftWindowProc.cpp" />
     <ClCompile Include="ReadFile_ScrollRange.cpp" />
@@ -158,6 +163,7 @@
     <ClCompile Include="WindowsProject1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
     <ResourceCompile Include="WindowsProject1.rc" />
   </ItemGroup>
   <ItemGroup>
