--- a/WindowsProject1/Resource.rc
+++ b/WindowsProject1/Resource.rc
@@ -51,8 +51,8 @@ END
 //
 
 IDD_DIALOG1 DIALOGEX 0, 0, 267, 116
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_SETFOREGROUND | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+CAPTION "Перед началом работы"
 FONT 8, "Microsoft YaHei", 400, 0, 0xCC
 BEGIN
     PUSHBUTTON      "Запустить",DialogButton,103,79,50,14
